[package]
name = "hadris-fat"
version = "2.0.0-rc.4"
description = "Rust FAT12/FAT16/FAT32 filesystem library for disk images, embedded devices, and no-std"
readme = "README.md"
keywords = ["fat", "fat32", "vfat", "filesystem", "no-std"]
categories = ["no-std", "filesystem"]
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

# docs.rs builds with default features only, which would hide the async,
# cache, and tool APIs. Build both stable I/O modes and the full stable sync
# capability set; the unstable exFAT preview remains deliberately opt-in.
[package.metadata.docs.rs]
features = ["std", "sync", "async", "read", "write", "lfn", "cache", "tool"]

[features]
default = ["read", "write", "lfn", "std", "sync"]
sync = ["hadris-io/sync", "hadris-common/sync"]
async = ["hadris-io/async", "hadris-common/async"]
alloc = ["chrono?/alloc", "hadris-io/alloc"]
std = ["alloc", "dep:chrono", "chrono/std", "chrono/clock", "hadris-io/std", "hadris-common/std"]
read = []
write = ["alloc", "read"]
lfn = []
# FAT sector caching for reduced I/O operations.
# Implies `sync` because `cache.rs` uses sync I/O traits and the transparent
# wiring on `FatVolume` (`lock_for_fat`, etc.) is only generated in sync mode;
# async builds skip the cache entirely (deferred to phase C5b).
cache = ["alloc", "sync"]
# Analysis and diagnostic APIs.
# Implies `sync`: the analysis/verify code walks directories with the
# synchronous iterator API (`for entry in dir.entries()`) and is not
# async-aware, so it is emitted only in the sync slice (mirrors `cache`).
tool = ["alloc", "read", "sync"]
# Unstable exFAT preview. This root-level API is outside the V2 stability
# promise, uses synchronous I/O traits, and therefore selects the sync API.
unstable-exfat = ["alloc", "sync"]
# Embedded-friendly logging: derives `defmt::Format` on public diagnostic
# types (`FatError`, `FatType`, `FatDateTime`, `FsStatusFlags`) so they can
# be logged through `defmt::info!` etc. without going through `Debug`.
defmt = ["dep:defmt"]
# When set, dropping a `FileWriter` without calling `finish()` panics
# instead of silently losing the size/timestamp metadata update. Catches
# the most common corruption-causing mistake. Mirrors embedded-fatfs.
dirty-file-panic = []

[dependencies]
hadris-common = { workspace = true }
hadris-fixed = { workspace = true }
hadris-io = { workspace = true }
hadris-path = { workspace = true }
hadris-macros = { workspace = true }
spin.workspace = true

bitflags = { workspace = true }
bytemuck = { workspace = true, features = [
  "derive",
  "min_const_generics",
] }
chrono = { workspace = true, optional = true }
defmt = { version = "1.0", optional = true }

[build-dependencies]
parse-size = "1.1"

[dev-dependencies]
pretty_assertions = "1.4.1"
static_assertions = "1.1.0"
tempfile = "3"

[[test]]
name = "exfat_upcase_dos"
required-features = ["unstable-exfat"]
