[package]
name = "hadris-part"
version = "2.0.0-rc.3"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Partition table support for MBR, GPT, and Hybrid MBR"
readme = "README.md"
keywords = ["partition", "mbr", "gpt", "disk", "no-std"]
categories = ["no-std", "filesystem"]

[features]
default = ["std", "sync", "read"]
std = ["alloc", "hadris-io/std"]
sync = ["hadris-io/sync"]
async = ["hadris-io/async"]
alloc = ["hadris-io/alloc"]
read = []
write = ["alloc", "read"]
crc = ["dep:crc"]
rand = ["dep:rand"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
hadris-io = { workspace = true, default-features = false }
hadris-macros = { workspace = true }
bytemuck = { workspace = true, features = ["derive", "min_const_generics"] }
endian-num.workspace = true
crc = { version = "3", default-features = false, optional = true }
rand = { version = "0.10", default-features = false, optional = true, features = ["thread_rng"] }
