[package]
name = "hadris-io"
version = "2.0.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "No-std I/O traits and utilities for the Hadris filesystem crates"
readme = "README.md"
keywords = ["io", "no-std", "read", "write", "seek"]
categories = ["no-std", "filesystem"]

[features]
default = ["sync", "std"]
sync = []
async = ["dep:embedded-io-async"]
alloc = []
std = ["sync", "alloc", "embedded-io/std", "embedded-io-async?/std"]

[dependencies]
cfg-if.workspace = true
bytemuck.workspace = true
embedded-io.workspace = true
embedded-io-async = { workspace = true, optional = true }
