[package]
name = "hadris-macros"
version = "2.0.0-rc.4"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Proc macros for dual sync/async code generation in Hadris"
readme = "README.md"
keywords = ["macro", "async", "sync", "proc-macro"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
