[package]
name = "hadris-path"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Allocation-free lexical paths for virtual filesystems and archives"
keywords = ["path", "no-std", "filesystem", "archive"]
categories = ["no-std", "filesystem"]
include = ["src/**/*", "Cargo.toml", "README.md"]

[features]
default = []
alloc = []
