[package]
name = "hadris-storage"
version = "2.0.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust block-device geometry, capabilities, and adapters for std and no-std storage"
readme = "README.md"
keywords = ["block-device", "storage", "sector", "embedded", "no-std"]
categories = ["no-std", "filesystem"]

[features]
default = ["std", "sync"]
alloc = ["hadris-io/alloc"]
std = ["alloc", "hadris-io/std"]
sync = ["hadris-io/sync"]
async = ["hadris-io/async"]

[dependencies]
hadris-io = { workspace = true }
embedded-io.workspace = true
